--- a/src/app/cambia-password/cambia-password.component.html
+++ b/src/app/cambia-password/cambia-password.component.html
@@ -22,9 +22,7 @@
 
     <div id="form" class="form">
       <p class="textClass">Gestione Account</p>
-        <div class="allForm">
-
-
+        <div class="allForm" (keydown.enter)="confirmButtonDisabled ? null : updatePassword()">
 
             <div class="singleForm">
                 <p>
@@ -65,6 +63,7 @@
                     <button mat-raised-button color="primary" [disabled]="confirmButtonDisabled"
                         (click)="updatePassword()">Salva modifiche</button>
                 </p>
+
 
 
             </div>
