--- a/src/app/cambia-password/cambia-password.component.html
+++ b/src/app/cambia-password/cambia-password.component.html
@@ -24,36 +24,44 @@
       <p class="textClass">Gestione Account</p>
         <div class="allForm" (keydown.enter)="confirmButtonDisabled ? null : updatePassword()">
 
-            <div class="singleForm">
-                <p>
-                    <mat-form-field appearance="outline">
-                        <mat-label>Inserisci nuova password</mat-label>
-                        <input matInput [type]="hideNewPassword ? 'password' : 'text'" [formControl]="newPsw" required>
-                        <button mat-icon-button matSuffix (click)="hideNewPassword = !hideNewPassword"
-                            [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideNewPassword">
-                            <mat-icon>{{hideNewPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-                        </button>
-                        <mat-error *ngIf="newPsw.invalid">{{getErrorNewPsw()}}</mat-error>
-                    </mat-form-field>
-                </p>
+            <form [formGroup]="formGroup">
 
-            </div>
+                <div class="singleForm">
+                    <p>
+                        
+                        <mat-form-field appearance="outline">
+                            <mat-label>Inserisci nuova password</mat-label>
+                            <input matInput [type]="hideNewPassword ? 'password' : 'text'" formControlName="newPsw" required>
+                            <button mat-icon-button matSuffix (click)="hideNewPassword = !hideNewPassword"
+                                [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideNewPassword">
+                                <mat-icon>{{hideNewPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+                            </button>
+                            <mat-error *ngIf="formGroup.get('newPsw').invalid">{{getErrorNewPsw()}}</mat-error>
+                        </mat-form-field>
+                    </p>
+    
+                </div>
 
-            <div class="singleForm">
-                <p>
-                    <mat-form-field appearance="outline">
-                        <mat-label>Conferma nuova password</mat-label>
-                        <input matInput [type]="hideConfirmNewPassword ? 'password' : 'text'"
-                            [formControl]="confirmNewPsw" [disabled]="confirmPswDisabled" required>
-                        <button mat-icon-button matSuffix (click)="hideConfirmNewPassword = !hideConfirmNewPassword"
-                            [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideConfirmNewPassword">
-                            <mat-icon>{{hideConfirmNewPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-                        </button>
-                        <mat-error *ngIf="confirmNewPsw.invalid">{{getErrorConfirmNewPsw()}}</mat-error>
-                    </mat-form-field>
-                </p>
+                <div class="singleForm">
+                    <p>
+                        <mat-form-field appearance="outline">
+                            <mat-label>Conferma nuova password</mat-label>
+                            <input matInput [type]="hideConfirmNewPassword ? 'password' : 'text'"
+                            formControlName="confirmNewPsw" [disabled]="confirmPswDisabled" required>
+                            <button mat-icon-button matSuffix (click)="hideConfirmNewPassword = !hideConfirmNewPassword"
+                                [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideConfirmNewPassword">
+                                <mat-icon>{{hideConfirmNewPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+                            </button>
+                            <mat-error *ngIf="formGroup.get('confirmNewPsw').invalid">{{getErrorConfirmNewPsw()}}</mat-error>
+                        </mat-form-field>
+                    </p>
+    
+                </div>
+                        
+            </form>
+            
 
-            </div>
+            
 
 
             <div class="singleForm">
