--- a/src/app/notlogged/notlogged.component.html
+++ b/src/app/notlogged/notlogged.component.html
@@ -29,8 +29,8 @@
             </button>
           </mat-form-field>
         </p>
-       <button id="loginButton" class="myButtonNoHover" disabled mat-raised-button color="primary" *ngIf="loginButtonDisabled">Login</button>
-       <button id="loginButton" class="myButton" mat-raised-button color="primary" (click)="myLogin()" *ngIf="!loginButtonDisabled">Login</button>
+       <button  class="myButtonNoHover" disabled mat-raised-button color="primary" *ngIf="loginButtonDisabled">Login</button>
+       <button  class="myButton" mat-raised-button color="primary" (click)="myLogin()" *ngIf="!loginButtonDisabled">Login</button>
       </div>
 
 </body>
