--- a/src/app/gforce-section/gforce-section.component.css
+++ b/src/app/gforce-section/gforce-section.component.css
@@ -1,9 +1,10 @@
 
 .banner-font{
 
-  font-family: Impact, sans-serif;
+  font-family: "Signika", Arial, Helvetica, sans-serif;
+  font-weight: 990;
   position: relative;
-  left: 57px;
+  left: 37px;
 
 }
 
