--- a/src/app/gforce-section/gforce-section.component.html
+++ b/src/app/gforce-section/gforce-section.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-4" style="position: absolute; left: 60%">
+<div class="col-sm-4" style="position: absolute; left: 60%; top: 0%">
     <h1 class="banner-font">Accelerazioni</h1>
     <img id="pointer" class="sotto" src="../../assets/img/pointer.png" alt="" width="188" height="188" [style.left]="x_axis" [style.bottom]="y_axis">
     <img id="grafico" class="sopra" src="../../assets/svg/Gforce.svg" alt="" width="250" height="250">
