--- a/src/app/map-section/map-section.component.html
+++ b/src/app/map-section/map-section.component.html
@@ -1,5 +1,4 @@
 <div class="col-sm-4">
-    <!--<img id="carica">-->
-    <h1 id="#" class="banner-font">Mappa</h1>
+    <h1 id="#" class="banner-font">Posizione Vettura</h1>
     <div id="mapdiv" style="max-height: 400px"></div>
 </div>
