--- a/src/app/speedometer-section/speedometer-section.component.css
+++ b/src/app/speedometer-section/speedometer-section.component.css
@@ -1,6 +1,7 @@
 .banner-font{
 
-    font-family: Impact;
-    position: relative;
-    left: 60px;
+  font-family: "Signika", Arial, Helvetica, sans-serif;
+  font-weight: 990;
+  position: relative;
+  left: 60px;
 }
