--- a/src/app/angles/angles.component.html
+++ b/src/app/angles/angles.component.html
@@ -4,12 +4,12 @@
             <h1 class="banner-font-small" style="margin-left: 5px">Rollio:</h1>
             <button class="btn " type="button"><span class="spanBar">{{rollio}}°</span></button>
         </div>
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" style="margin-left: 20px">
-            <h1 class="banner-font-small">Becchegg:</h1>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" style="margin-left: 25px">
+            <h1 class="banner-font-small" style="margin-left: -13px">Becchegg:</h1>
             <button class="btn " type="button"><span class="spanBar">{{beccheggio}}°</span></button>
         </div>
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" style="margin-left: 20px">
-            <h1 class="banner-font-small">Imbardata:</h1>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" style="margin-left: 25px">
+            <h1 class="banner-font-small" style="margin-left: -5px">Imbardata:</h1>
             <button class="btn " type="button"><span class="spanBar">{{imbardata}}°</span></button>
         </div>
     </div>
