--- a/src/app/new-battery/new-battery.component.html
+++ b/src/app/new-battery/new-battery.component.html
@@ -6,14 +6,14 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row" style="margin-top: 20px">
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="margin-top: 10px">
             <button class="btn bottom" type="button"><span class="spanBar">{{tmediaHV | number: '1.1-2'}}°C</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{tensioneHV | number: '1.1-3'}}V</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{correnteHV | number: '1.1-3'}}A</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{dataHV}}%</span></button>
         </div>
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="margin-top: 10px; margin-left: 50px">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="margin-top: 10px; margin-left: 85px">
             <button class="btn bottom" type="button"><span class="spanBar">{{tmediaLV | number: '1.1-2'}}°C</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{tensioneLV | number: '1.1-3'}}V</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{correnteLV | number: '1.1-3'}}A</span></button>
@@ -24,7 +24,7 @@
         <div class="col-sm-5">
             <div id="battery"></div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4" style="margin-left: 30px">
             <div id="battery2"></div>
         </div>
     </div>
