--- a/src/app/rotazione-volante/rotazione-volante.component.html
+++ b/src/app/rotazione-volante/rotazione-volante.component.html
@@ -1,6 +1,6 @@
-<div style="position: relative; left: 380px; top: -180px">
+<div class="corpo" style="position: relative; left: 400px; top: -150px">
 
-    <h1 class="banner-font">Volante: {{gradi |number:'1.1-1'}}°</h1>
+  <h1 class="banner-font">Volante: <span class="valore">{{gradi |number:'1.1-1'}}°</span></h1>
     <img id="volante" class="image sotto" src="../../assets/img/volante.png" alt="" width="220" height="220"
          [style.transform]="rotation">
     <img id="cerchio" class="image sopra" src="../../assets/img/cerchio.png" alt="" width="220" height="220">
