--- a/src/app/visionemacchina/visionemacchina.component.html
+++ b/src/app/visionemacchina/visionemacchina.component.html
@@ -4,11 +4,11 @@
     <div class="col-sm-4">
 
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
-        <button class="btn " type="button"><span class="spanSing">Engine: {{tempEng1 | number: '1.1-2' }}°C</span><span class="spanSing inv">IGBT: {{tempIgbt1| number: '1.1-2' }}°C</span></button>
+        <button [class]="tempEng1Class" type="button"><span class="spanSing">Engine: {{tempEng1 | number: '1.1-2' }}°C</span><span class="spanSing inv">IGBT: {{tempIgbt1| number: '1.1-2' }}°C</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
-        <button class="btn " type="button"><span class="spanSing">Engine: {{tempEng3| number: '1.1-2' }}°C</span><span class="spanSing inv">IGBT: {{tempIgbt3| number: '1.1-2' }}°C</span></button>
+        <button [class]="tempEng3Class" type="button"><span class="spanSing">Engine: {{tempEng3| number: '1.1-2' }}°C</span><span class="spanSing inv">IGBT: {{tempIgbt3| number: '1.1-2' }}°C</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
 
 
@@ -19,11 +19,11 @@
     </div>
     <div class="col-sm-4">
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
-        <button class="btn " type="button"><span class="spanSing">Engine: {{tempEng2| number: '1.1-2' }}°C</span><span class="spanSing inv">IGBT: {{tempIgbt2| number: '1.1-2' }}°C</span></button>
+        <button [class]="tempEng2Class" type="button"><span class="spanSing">Engine: {{tempEng2| number: '1.1-2' }}°C</span><span class="spanSing inv">IGBT: {{tempIgbt2| number: '1.1-2' }}°C</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
-        <button class="btn " type="button"><span class="spanSing">Engine: {{tempEng4| number: '1.1-2' }}°C</span><span class="spanSing inv">IGBT: {{tempIgbt4| number: '1.1-2' }}°C</span></button>
+        <button [class]="tempEng4Class" type="button"><span class="spanSing">Engine: {{tempEng4| number: '1.1-2' }}°C</span><span class="spanSing inv">IGBT: {{tempIgbt4| number: '1.1-2' }}°C</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
 
     </div>
