--- a/src/app/storico/storico.component.html
+++ b/src/app/storico/storico.component.html
@@ -29,9 +29,9 @@
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
             &nbsp;&nbsp;&nbsp;
-            <label>Scegli ora inizio:&nbsp;</label><input type="time" #orain id="oraInizioGenerale" value="15:16:00" step="1">
+            <label>Scegli ora inizio:&nbsp;</label><input type="time" #orain id="oraInizioGenerale" step="1">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <label>Scegli ora fine:&nbsp;</label><input type="time" #orafin id="oraFineGenerale" value="22:18:00" step="1">
+            <label>Scegli ora fine:&nbsp;</label><input type="time" #orafin id="oraFineGenerale" step="1">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <button mat-button color="primary" *ngIf="date.value.length>7" (click)=prepareValuesForSearch(orain.value,orafin.value,date.value) style="font-size: 17px">Search</button>
             <button mat-button color="primary" disabled *ngIf="date.value.length<=7" style="font-size: 17px">Search</button>
