Responsive graphic login

--- a/src/app/logged/logged.component.html
+++ b/src/app/logged/logged.component.html
@@ -3,17 +3,40 @@
 
     <body>
 
-        <div class="loggedin-div" id="user_div">
+      <div class="row">
+
+        <div class="loggedin-div col" id="user_div">
+          <div class="row">
             <object>
               <embed src="../assets/svg/eteam.svg" width="40%" height="40%">
             </object>
-          <h3 class="loginHeader">Bentornato</h3>
-            <button class="myButton myHover" mat-raised-button color="primary" routerLink="../statogenerale">Stato Generale</button>
-            <button class="myButton myHover" mat-raised-button color="primary" routerLink="../storico">Storico</button>
-            <button class="myButton myHover" mat-raised-button color="primary" routerLink="../cambiopassword">Account</button>
-            <button class="myButton myHover" mat-raised-button color="primary" (click)="logout()" >Logout</button>
-
           </div>
+          
+          <div class="row">
+            <h3 class="loginHeader col">Bentornato</h3>
+          </div>
+
+        <div class="row">
+          <div class="col">
+
+            <button class="myButton myHover" mat-raised-button color="primary" routerLink="../statogenerale">Stato Generale</button>
+          </div>
+
+        </div>
+        <div class="row">
+          <button class="myButton myHover" mat-raised-button color="primary" routerLink="../storico">Storico</button>
+        </div>
+        <div class="row">
+          <button class="myButton myHover" mat-raised-button color="primary" routerLink="../cambiopassword">Account</button>
+        </div>
+        <div class="row">
+          <button class="myButton myHover" mat-raised-button color="primary" (click)="logout()" >Logout</button>
+        </div>
+
+        </div>
+
+      </div>
+        
 
     </body>
 
