--- a/src/app/logged/logged.component.css
+++ b/src/app/logged/logged.component.css
@@ -36,7 +36,7 @@ body{
 
     border: 0px;
     border-radius: 5px;
-    padding: 15px;
+    padding: 25px;
     margin-top: 10px;
     display: block;
     width: 100%;
@@ -48,7 +48,7 @@ body{
 .myButton{
     border: 0px;
     border-radius: 5px;
-    padding: 15px;
+    padding: 25px;
     margin-top: 10px;
     display: block;
     width: 100%;
@@ -62,4 +62,205 @@ body{
     color: #5d8ffc;
     border: 1px solid #5d8ffc;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 600px)
+{
+    .loggedin-div{
+        width: 60%;
+        margin: 0px auto;
+        margin-top: 150px;
+        padding: 20px;
+        text-align: center;
+        background-color: whitesmoke;
+        display: block;
+        border-radius: 3px;
+        overflow: auto;
+    }
+
+    body{
+        background: #383140;
+        padding: 0px;
+        margin: 0px;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
+        height: 100%; 
+        overflow: auto;
+    }
+}
+
+
+@media (min-width:320px)  {
+    
+    /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */ 
+    .loggedin-div{
+        width: 60%;
+        margin: 0px auto;
+        margin-top: 150px;
+        padding: 20px;
+        text-align: center;
+        background-color: whitesmoke;
+        display: block;
+        border-radius: 3px;
+        overflow: auto;
+    }
+
+    body{
+        background: #383140;
+        padding: 0px;
+        margin: 0px;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
+        height: 100%; 
+        overflow: auto;
+    }
+
+}
+@media (min-width:480px)  { 
+    /* smartphones, Android phones, landscape iPhone */ 
+    .loggedin-div{
+        width: 60%;
+        margin: 0px auto;
+        margin-top: 150px;
+        padding: 20px;
+        text-align: center;
+        background-color: whitesmoke;
+        display: block;
+        border-radius: 3px;
+        overflow: auto;
+    }
+
+    body{
+        background: #383140;
+        padding: 0px;
+        margin: 0px;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
+        height: 100%; 
+        overflow: auto;
+    }
+
+}
+@media (min-width:600px)  { 
+    /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ 
+    .loggedin-div{
+        width: 60%;
+        margin: 0px auto;
+        margin-top: 150px;
+        padding: 20px;
+        text-align: center;
+        background-color: whitesmoke;
+        display: block;
+        border-radius: 3px;
+        overflow: auto;
+    }
+
+    body{
+        background: #383140;
+        padding: 0px;
+        margin: 0px;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
+        height: 100%; 
+        overflow: auto;
+    }
+
+}
+@media (min-width:801px)  { 
+    /* tablet, landscape iPad, lo-res laptops ands desktops */ 
+    .loginHeader{
+        color: black;
+        font-size: 25;
+    }
+
+    button{
+        font-size: 25px;
+    }
+
+    .loggedin-div{
+        width: 60%;
+        margin: 0px auto;
+        margin-top: 150px;
+        padding: 20px;
+        text-align: center;
+        background-color: whitesmoke;
+        display: block;
+        border-radius: 3px;
+        overflow: hidden;
+        height: 100%;
+    }
+
+    body{
+        background: #383140;
+        padding: 0px;
+        margin: 0px;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
+        height: 100%; 
+        overflow: hidden;
+    }
+}
+@media (min-width:1025px) { 
+    /* big landscape tablets, laptops, and desktops */ 
+    .loginHeader{
+        color: black;
+        font-size: 30px;
+    }
+
+    button{
+        font-size: 25px;
+        
+    }
+    .loggedin-div{
+        width: 60%;
+        margin: 0px auto;
+        margin-top: 150px;
+        padding: 20px;
+        text-align: center;
+        background-color: whitesmoke;
+        display: block;
+        border-radius: 3px;
+    }
+
+    body{
+        background: #383140;
+        padding: 0px;
+        margin: 0px;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
+        height: 100%; 
+        overflow: hidden;
+    }
+}
+@media (min-width:1281px) { 
+    /* hi-res laptops and desktops */ 
+    .loginHeader{
+        color: black;
+        font-size: 30px;
+    }
+
+    button{
+        font-size: 25px;
+    }
+
+    .loggedin-div{
+        width: 25%;
+        margin: 0px auto;
+        margin-top: 150px;
+        padding: 20px;
+        text-align: center;
+        background-color: whitesmoke;
+        display: block;
+        border-radius: 3px;
+    }
+
+    body{
+        background: #383140;
+        padding: 0px;
+        margin: 0px;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
+        height: 100%; 
+        overflow: hidden;
+    }
 }
