--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,32 +1,32 @@
-<nav class="navbar navbar-default">
-    <a class="navbar-brand">
-        <img src="/assets/img/logo.svg" width="30" height="30" class="navbar-header" alt="" style="margin-top: -6px; margin-right: 6px">
-        <strong class="banner-font">Unina Corse</strong>
-    </a>
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    
+
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-            <ul class="nav navbar-nav">
-                <li class="sections-font">
-                    <a routerLink="/statogenerale" routerLinkActive="routerActive"><b>Stato Generale</b><span class="sr-only">(current)</span></a>
+            <a class="navbar-brand">
+                <img src="/assets/img/logo.svg" width="30" height="30" class="navbar-header" alt="" style="margin-top: -6px; margin-right: 6px">
+                <strong class="banner-font">Unina Corse</strong>
+            </a>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="sections-font nav-item">
+                    <a class="nav-link" routerLink="/statogenerale" routerLinkActive="routerActive"><b>Stato Generale</b><span class="sr-only">(current)</span></a>
                 </li>
-                <li class="sections-font">
-                    <a routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Dettaglio Batterie</b><span class="sr-only">(current)</span></a>
+                <li class="sections-font nav-item">
+                    <a class="nav-link" routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Dettaglio Batterie</b><span class="sr-only">(current)</span></a>
                 </li>
-                <li class="sections-font">
-                    <a routerLink="/test" routerLinkActive="routerActive"><b>Tracciato</b><span class="sr-only">(current)</span></a>
+                <li class="sections-font nav-item">
+                    <a class="nav-link" routerLink="/test" routerLinkActive="routerActive"><b>Tracciato</b><span class="sr-only">(current)</span></a>
                 </li>
-                <li class="sections-font">
-                    <a routerLink="/diagnostica" routerLinkActive="routerActive"><b>Diagnostica</b><span class="sr-only">(current)</span></a>
+                <li class="sections-font nav-item">
+                    <a class="nav-link" routerLink="/diagnostica" routerLinkActive="routerActive"><b>Diagnostica</b><span class="sr-only">(current)</span></a>
                 </li>
-                <li class="sections-font">
-                    <a routerLink="/storico" routerLinkActive="routerActive"><b>Storico Sensori</b><span class="sr-only">(current)</span></a>
+                <li class="sections-font nav-item">
+                    <a class="nav-link" routerLink="/storico" routerLinkActive="routerActive"><b>Storico Sensori</b><span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a routerLink="/cambiopassword"><b>Account</b></a></li>
-                <li><a routerLink="/login"><b>Menù Principale</b></a></li>
+                <li><a class="nav-link" routerLink="/cambiopassword"><b>Account</b></a></li>
+                <li><a class="nav-link" routerLink="/login"><b>Menù Principale</b></a></li>
             </ul>
         </div>
-    </div>
 </nav>
