--- a/src/app/rotazione-volante/rotazione-volante.component.html
+++ b/src/app/rotazione-volante/rotazione-volante.component.html
@@ -1,4 +1,4 @@
-<div class="corpo" style="position: relative; left: 400px; top: -150px">
+<div class="corpo" style="position: relative; top: -150px">
 
   <h1 class="banner-font">Volante: <span class="valore">{{gradi |number:'1.1-1'}}°</span></h1>
     <img id="volante" class="image sotto" src="../../assets/img/volante.png" alt="" width="220" height="220"
