--- a/src/app/speedometer-section/speedometer-section.component.html
+++ b/src/app/speedometer-section/speedometer-section.component.html
@@ -1,10 +1,18 @@
-<h1 class="banner-font">Velocità Assoluta</h1>
-<div class="col-sm-4">
-    <div id="speed" class="coll-sm-4">
-        <canvas id="canvas"></canvas>
-    </div>
 
-    <app-bars-section></app-bars-section>
+<div class="row">
 
+        <div class="col-sm-6">
+            <h1 class="banner-font">Velocità Assoluta</h1>
+            <div class="col-sm-4">
+                <div id="speed" class="coll-sm-4">
+                    <canvas id="canvas"></canvas>
+                </div>
+                <app-bars-section></app-bars-section>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <app-gforce-section></app-gforce-section>
+        </div>
+        
 </div>
-<app-gforce-section></app-gforce-section>
+
