--- a/src/app/spie-controllo/spie-controllo.component.css
+++ b/src/app/spie-controllo/spie-controllo.component.css
@@ -137,3 +137,14 @@
       padding-left: 30px;
       padding-right: 30px;
   }
+
+.myDivContainer{
+
+  border:  black; 
+  border-style: dotted; 
+  padding: 10px;
+  padding-right: 30px;
+  position: relative; 
+  margin-top: -130px;
+
+}
