--- a/src/app/stato-generale/stato-generale.component.html
+++ b/src/app/stato-generale/stato-generale.component.html
@@ -1,6 +1,4 @@
 <html>
-
-
   <script src="https://www.openlayers.org/api/OpenLayers.js"></script>
   <script src="../../assets/js/OpenLayers.js"></script>
   <body style="background-color: #65717e">
@@ -9,7 +7,7 @@
         <div class="container-fluid">
 
             <div class="row">
-                <div class="col-sm">
+                <div class="col-sm-4">
                     <app-map-section></app-map-section>
                 </div>
                 <div class="col-sm-4">
@@ -23,13 +21,16 @@
                 <div class="col-sm-4">
                     <app-spie-controllo></app-spie-controllo>
                 </div>
+                
+                <div class="col-sm-4">
+                    <app-visionemacchina></app-visionemacchina>
+                </div>
+
                 <div class="col-sm-4">
                     <app-rotazione-volante></app-rotazione-volante>
                 </div>
-                <div class="col-sm">
-                    <app-visionemacchina></app-visionemacchina>
-                </div>
             </div>
+
 
         </div>
 
