--- a/src/app/visionemacchina/visionemacchina.component.html
+++ b/src/app/visionemacchina/visionemacchina.component.html
@@ -1,6 +1,5 @@
-<div style="position:relative; top: -180px">
-    <div class="col-sm-4 text-center" >
 
+<div class="row">
     <div class="col-sm-4">
 
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
@@ -10,13 +9,13 @@
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
         <button [class]="tempEng3Class" type="button"><span class="spanSing">Engine: {{tempEng3| number: '1.1-2' }}°C</span><span class="spanSing inv">IGBT: {{tempIgbt3| number: '1.1-2' }}°C</span></button>
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
-
-
     </div>
-    <div class="col-sm-4" style="margin-top: 10px;">
+
+    <div class="col-sm-4">
         <img class="car" src="../../assets/img/marker2.png" height="350px" width="150px">
 
     </div>
+
     <div class="col-sm-4">
         <button class="btn empty" type="button"><span class="spanBar inv">-</span></button>
         <button [class]="tempEng2Class" type="button"><span class="spanSing">Engine: {{tempEng2| number: '1.1-2' }}°C</span><span class="spanSing inv">IGBT: {{tempIgbt2| number: '1.1-2' }}°C</span></button>
@@ -29,4 +28,11 @@
     </div>
 
 </div>
-</div>
+        
+
+
+    
+   
+
+    
+
