--- a/src/app/angles/angles.component.html
+++ b/src/app/angles/angles.component.html
@@ -1,16 +1,17 @@
-<div class="container-fluid" style="border:  black; border-style: dotted; padding: 10px;position: absolute; margin-top: 260px;margin-right: -150px">
-    <div cass="row" style="position: relative">
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <h1 class="banner-font-small" style="margin-left: 5px">Rollio:</h1>
-            <button class="btn " type="button"><span class="spanBar">{{rollio}}°</span></button>
+   <div cass="row">
+        <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                <h1 class="banner-font-small">Rollio:</h1>
+                <button class="btn " type="button"><span class="spanBar">{{rollio}}°</span></button>
+            </div>
+            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                <h1 class="banner-font-small">Becchegg:</h1>
+                <button class="btn " type="button"><span class="spanBar">{{beccheggio}}°</span></button>
+            </div>
+            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                <h1 class="banner-font-small">Imbardata:</h1>
+                <button class="btn " type="button"><span class="spanBar">{{imbardata}}°</span></button>
+            </div>
         </div>
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" style="margin-left: 25px">
-            <h1 class="banner-font-small" style="margin-left: -13px">Becchegg:</h1>
-            <button class="btn " type="button"><span class="spanBar">{{beccheggio}}°</span></button>
-        </div>
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" style="margin-left: 25px">
-            <h1 class="banner-font-small" style="margin-left: -5px">Imbardata:</h1>
-            <button class="btn " type="button"><span class="spanBar">{{imbardata}}°</span></button>
-        </div>
+        
     </div>
-</div>
