--- a/src/app/spie-controllo/spie-controllo.component.html
+++ b/src/app/spie-controllo/spie-controllo.component.html
@@ -1,51 +1,94 @@
-<div class="container-fluid" style="border:  black; border-style: dotted; padding: 10px;position: relative; margin-top: -130px;">
-    <div class="row">
-        <div class="col-sm-6 col-md-offset-4" style="margin-top: 9px">
-            <h2 id="spieControllo" class="banner-font">Spie di Controllo</h2>
+<div class="row">
+
+    <div class="col-sm-12" class="myDivContainer">
+        <div class="row">
+            <div class="col-sm-6 col-md-offset-4" style="margin-top: 9px">
+                <h2 id="spieControllo" class="banner-font">Spie di Controllo</h2>
+            </div>
+        </div>
+        <div class="row" style="position: relative; top: -40px">
+            <div class="col-sm-3">
+
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <button [class]="bms">BMS</button>
+                </div>
+
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <button [class]="trq">TRQ</button>
+                </div>
+
+            </div>
+
+            <div class="col-sm-3">
+                
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <button [class]="ecu">ECU</button>
+                </div>
+
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                    <button [class]="oh">OH</button>
+                </div>
+            </div>
+
+            <div class="col-sm-3">
+                
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                    <button [class]="tcs">TCS</button>
+                </div>
+
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                    <button [class]="imd">IMD</button>
+                </div>
+                
+            </div>
+
+            <div class="col-sm-3">
+
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                    <button class="button">???</button>
+                </div>
+
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                    <button class="button">???</button>
+                </div>
+            </div>
+
+            
+            
+            
+            
+            
+            
+            
+            
+        </div>
+        <div class="row" style="position: relative; top: -20px">
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <h1 class="banner-font-small">T.Freno:</h1>
+                <button class="btn " type="button"><span class="spanBar">{{breakTemp}}</span></button>
+            </div>
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <h1 class="banner-font-small">P.Freni:</h1>
+                <button class="btn " type="button"><span class="spanBar">{{breakPressure | number: '1.1-3'}}</span></button>
+            </div>
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <h1 class="banner-font-small">T.Liquid:</h1>
+                <button class="btn " type="button"><span class="spanBar">{{liquidTemperature | number: '1.1-2'}}</span></button>
+            </div>
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <h1 class="banner-font-small">Flusso:</h1>
+                <button class="btn " type="button"><span class="spanBar">{{liquidStream}}</span></button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <app-angles></app-angles>
+            </div>
+            
         </div>
     </div>
-    <div class="row" style="position: relative; top: -40px">
-        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 10px">
-            <button [class]="bms">BMS</button>
-        </div>
-        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button [class]="trq">TRQ</button>
-        </div>
-        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button [class]="ecu">ECU</button>
-        </div>
-        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button [class]="oh">OH</button>
-        </div>
-        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button [class]="tcs">TCS</button>
-        </div>
-        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button [class]="imd">IMD</button>
-        </div>
-        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button class="button" >???</button>
-        </div>
-        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button class="button">???</button>
-        </div>
-    </div>
-    <div class="row" style="position: relative; top: -20px">
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <h1 class="banner-font-small">T. Freno:</h1>
-            <button class="btn " type="button"><span class="spanBar">{{breakTemp}}</span></button>
-        </div>
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <h1 class="banner-font-small">P.Freni:</h1>
-            <button class="btn " type="button"><span class="spanBar">{{breakPressure | number: '1.1-3'}}</span></button>
-        </div>
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <h1 class="banner-font-small">T.Liquid:</h1>
-            <button class="btn " type="button"><span class="spanBar">{{liquidTemperature | number: '1.1-2'}}</span></button>
-        </div>
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <h1 class="banner-font-small">Flusso:</h1>
-            <button class="btn " type="button"><span class="spanBar">{{liquidStream}}</span></button>
-        </div>
-    </div>
+    
+    
+
 </div>
